--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.15",
     "expo-font": "^11.6.0",
     "expo-sqlite": "~11.3.3",
@@ -18,12 +19,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-web": "~0.19.6",
     "react-native-safe-area-context": "4.6.3",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^6.1.0"
   },
   "private": true
 }
